src/components/styling.css
body {
  background-color: #f2f3f4;
  margin: 0;
}

a, a:visited {
  color: red;
}

a:hover {
  color: red;
}

/* Dark mode styles */
.dark-mode {
  background-color: #282828;
  color: #fff;
  margin: 0;
}

/* Light mode styles */
.light-mode {
  background-color: #f2f3f4;
  color: #282828;
  margin: 0;
}

.light-heading {
  color: darkred;
  text-align: center;
  text-decoration-line: underline;
  display: flex;
  justify-content: center;
  font-size: 60px;
  margin-bottom: 0;
  margin-top: 0;
}

.dark-heading {
  color: lightcoral;
  background-color: #282828;
  text-align: center;
  text-decoration-line: underline;
  display: flex;
  justify-content: center;
  font-size: 60px;
  margin-bottom: 0;
  margin-top: 0;
}

.collectionHeading {
  color: darkred;
  text-align: center;
  text-decoration-line: underline;
  display: flex;
  justify-content: center;
  font-size: 60px;
  margin-bottom: 10px;
  margin-top: 10px;
}

.movieListContainer {
  max-height: calc(100vh - 400px);
  overflow-y: auto; /* Enable vertical scrolling if needed */
}

.dark-bottom {
  background-color: #282828;
  color: #ccc;
  padding: 20px;
}

.light-bottom {
  background-color: #f2f3f4;
  color: #282828;
  padding: 20px;
}

.movieList {
  text-align: center;
  width: 500px;
  font-size: 30px;
  margin: 0 auto;
  display: block;
}

.totalWatched {
  text-align: center;
  font-size: 22px;
  font-family: sans-serif;
  font-weight: bolder;
  font-style: italic;
  padding-bottom: 1%;
}

.promptPage-light {
  text-align: center;
  width: 500px;
  font-size: 30px;
  color: #282828;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.promptPage-dark {
  text-align: center;
  width: 500px;
  font-size: 30px;
  color: #ccc;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.darkModeButton {
    position: absolute;
    top: 10px;
    left: 10px;
    background-color: #cbd0d5;
    color: #333;
    border: none;
    cursor: pointer;
    font-size: 16px;
}


::placeholder {
	color: #cbd0d5;
}

/* Start of button code */
.button-82-pushable {
  position: relative;
  border: none;
  background: transparent;
  padding: 0;
  cursor: pointer;
  outline-offset: 4px;
  transition: filter 150ms;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  /* Need below code to center the button */
  margin: 0 auto;
  display: block;
  /* Set margins */
  margin-top: 10px;
  margin-bottom: 10px;
}
  
.button-82-shadow {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  background: hsl(0deg 0% 0% / 0.25);
  will-change: transform;
  transform: translateY(2px);
  transition:
    transform
    600ms
    cubic-bezier(.3, .7, .4, 1);
}
  
.button-82-edge {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  background: linear-gradient(
    to left,
    hsl(340deg 100% 16%) 0%,
    hsl(340deg 100% 32%) 8%,
    hsl(340deg 100% 32%) 92%,
    hsl(340deg 100% 16%) 100%
  );
}
  
.button-82-front {
  display: block;
  position: relative;
  padding: 12px 27px;
  border-radius: 12px;
  font-size: 1.1rem;
  color: white;
  background: hsl(345deg 100% 47%);
  will-change: transform;
  transform: translateY(-4px);
  transition:
    transform
    600ms
    cubic-bezier(.3, .7, .4, 1);
}

@media (min-width: 768px) {
  .button-82-front {
    font-size: 1.25rem;
    padding: 12px 42px;
  }
}

.button-82-pushable:hover {
  filter: brightness(110%);
  -webkit-filter: brightness(110%);
}

.button-82-pushable:hover .button-82-front {
  transform: translateY(-6px);
  transition:
    transform
    250ms
    cubic-bezier(.3, .7, .4, 1.5);
}

.button-82-pushable:active .button-82-front {
  transform: translateY(-2px);
  transition: transform 34ms;
}

.button-82-pushable:hover .button-82-shadow {
  transform: translateY(4px);
  transition:
    transform
    250ms
    cubic-bezier(.3, .7, .4, 1.5);
}

.button-82-pushable:active .button-82-shadow {
  transform: translateY(1px);
  transition: transform 34ms;
}

.button-82-pushable:focus:not(:focus-visible) {
  outline: none;
}
/* End of button code */

/* Input field styling */
input {
  border: 20 px;
  border-width: 5px;
  border-radius: 20px;
  border-color: red;
}

#movieInList {
    font-size: 20px;
    transform: scale(1.5);
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 13px; /* Padding between checkbox and movie names */
}

